--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.3.0",
     "@tenderly/hardhat-tenderly": "^1.0.10",
     "@typechain/ethers-v5": "^7.1.0",
+    "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/dotenv": "^8.2.0",
@@ -50,23 +51,19 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "rm -rf ./types/typechain && mkdir ./types/typechain && COMPILING=1 hardhat compile && yarn types ",
-    "hf": "hf() { local network=\"$1\"; shift; FORKING_NETWORK=$network yarn hardhat \"$@\"; }; hf",
-    "chain": "hardhat node --network hardhat --no-deploy",
-    "fork": "env -- hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/$INFURA_KEY",
-    "test": "test() { TESTING=1 yarn hf \"$1\" test; }; test",
-    "compile": "COMPILING=1 hardhat compile",
-    "types": "yarn typechain --target ethers-v5 --out-dir types/typechain 'artifacts/!(build-info)/**/+([a-zA-Z0-9_]).json'",
-    "deploy": "hardhat deploy  ",
-    "export:all": "hardhat export --export-all ../vue-app/src/config/hardhat_contracts.json",
-    "flatten": "hardhat flatten",
-    "postdeploy": "hardhat run scripts/publish.js",
-    "watch": "node scripts/watch.js",
-    "accounts": "hardhat accounts",
-    "balance": "hardhat balance",
-    "send": "hardhat send",
-    "generate": "hardhat generate",
-    "account": "hardhat account",
-    "verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8"
+    "test": "DISABLE_LOGS=true TS_NODE_TRANSPILE_ONLY=1 TESTING=1 yarn hardhat test",
+    "coverage": "DISABLE_LOGS=true FORKING_NETWORK=mainnet TS_NODE_TRANSPILE_ONLY=1 TESTING=1 yarn hh coverage",
+    "fork:mainnet": "FORKING_NETWORK=mainnet TS_NODE_TRANSPILE_ONLY=1 yarn hh fork --network hardhat",
+    "shell": "yarn solidity-shell",
+    "chain": "yarn hh node --no-deploy",
+    "compile": "COMPILING=true yarn hh compile",
+    "build": "yarn compile --force && yarn tsc",
+    "deploy": "yarn hh deploy",
+    "export": "yarn hh export:deployments",
+    "accounts": "yarn hh accounts",
+    "balance": "yarn hh balance",
+    "send": "yarn hh send",
+    "generate": "yarn hh generate",
+    "account": "yarn hh account"
   }
 }
