--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@eth-optimism/hardhat-ovm": "^0.2.2",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.5",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.0",
@@ -26,7 +26,9 @@
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/dotenv": "^8.2.0",
+    "@types/glob": "^7.2.0",
     "@types/mocha": "^9.0.0",
+    "@types/semver": "^7.3.9",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^4.1.0",
@@ -56,9 +58,9 @@
     "fork:mainnet": "FORKING_NETWORK=mainnet TS_NODE_TRANSPILE_ONLY=1 yarn hh fork --network hardhat",
     "shell": "yarn solidity-shell",
     "chain": "yarn hh node --no-deploy",
-    "compile": "COMPILING=true yarn hh compile",
+    "compile": "COMPILING=true yarn hardhat compile",
     "build": "yarn compile --force && yarn tsc",
-    "deploy": "yarn hh deploy",
+    "deploy": "yarn hardhat deploy",
     "export": "yarn hh export:deployments",
     "accounts": "yarn hh accounts",
     "balance": "yarn hh balance",
