--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^7.1.0",
     "moment": "^2.29.1",
     "node-watch": "^0.7.0",
+    "payspec-js": "^0.12.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1",
     "ts-node": "^10.3.0",
@@ -65,7 +66,8 @@
     "accounts": "yarn hh accounts",
     "balance": "yarn hh balance",
     "send": "yarn hh send",
-    "generate": "yarn hh generate",
-    "account": "yarn hh account"
+    "generate": "yarn hardhat generate",
+    "account": "yarn hardhat account",
+    "verify": "hardhat etherscan-verify  "
   }
 }
