--- a/.env 
+++ b/.env 
@@ -10,20 +10,19 @@ MNEMONIC_KEY="blossom spatial metal assault riot bullet truck update forward bra
 
 DEFAULT_NETWORK=hardhat
 
-MAINNET_RPC_URL=
+MAINNET_RPC_URL="https://eth-mainnet.alchemyapi.io/v2/J6DeHTWyMJGscatD4tSwNl5Vza2-QOpS"
 KOVAN_RPC_URL=
 GOERLI_RPC_URL=
-RINKEBY_RPC_URL=
+RINKEBY_RPC_URL="https://eth-rinkeby.alchemyapi.io/v2/k78WV2Yf8yVKW42DzDXz4EKfHgRyR1kK"
 ROPSTEN_RPC_URL=
-POLYGON_RPC_URL=
+POLYGON_RPC_URL="https://polygon-mainnet.g.alchemy.com/v2/U_eXcgEH3n5ZZu_vUU99oTede6k_bRkF"
 MUMBAI_RPC_URL=
-
 
 # Infura key used to deploy smart contracts
 INFURA_KEY=add-your-infura-key-here
 
 # Etherscan API key. This is used to verify smart contract in the Ethereum networks.
-ETHERSCAN_API_KEY=add-your-etherscan-api-key-here
+ETHERSCAN_API_KEY=PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8
 
 # CoinMarketCap API key used for gas reporting
 CMC_KEY=add-your-coinmarketcap-key-here
