--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^4.1.0",
+    "dotenv": "^16.0.1",
     "eslint": "^7.14.0",
     "eslint-config-standard-kit": "0.15.1",
     "eslint-plugin-import": "^2.22.1",
@@ -61,11 +62,12 @@
     "compile": "COMPILING=true yarn hardhat compile",
     "build": "yarn compile --force && yarn tsc",
     "deploy": "yarn hardhat deploy",
-    "export": "yarn hh export:deployments",
-    "accounts": "yarn hh accounts",
-    "balance": "yarn hh balance",
-    "send": "yarn hh send",
-    "generate": "yarn hh generate",
-    "account": "yarn hh account"
+    "export": "yarn hardhat export:deployments",
+    "accounts": "yarn hardhat accounts",
+    "balance": "yarn hardhat balance",
+    "send": "yarn hardhat send",
+    "generate": "yarn hardhat generate",
+    "account": "yarn hardhat account",
+    "verify": "yarn hardhat etherscan-verify"
   }
 }
